--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <section>
-        <img src="Tacos El jefe.png" alt="logo tacos el jefe">
+        <img src="https://github.com/SabinoAC/practica-taqueria-html/blob/gh-pages/Tacos%20El%20jefe.png" alt="logo tacos el jefe">
 
         <h2>Menú</h2>
         <h3>Tacos grandes</h3>
